# Saena

./: .gitattributes  .gitignore  AMGClass.cpp  AMGClass.h  CMakeLists.txt  CMakeLists_original.txt  README.md  install.sh  install.txt  petsc_solver.txt  prolongmatrix.cpp  prolongmatrix.h  restrictmatrix.cpp  strengthmatrix.cpp  strengthmatrix.h
data/: 100combblas_matvec004  2401o6s8.txt  25o1s4.mtx  289s8x16o1mu1.mtx  2DMed_sorted.mtx  2DMed_sorted2.mtx  2DSmall_sorted.mtx  4225s32x64o1mu1.mtx  81s4x8o1mu1.mtx  81s4x8o1mu1_2.mtx  A_4x4.txt  Nektarpprhs.txt  bcsstk25.mtx  combblas_matvec004  combblas_vs_saena  dense3.mtx  difference_vector  floatToBinary3  floatToBinary4_vector_long  floatToBinary5_vector_bool  floatToBinary6  floatToBinary6_matrix_long_to_uint  florida_matrices.txt  juliaAgg.txt  juliaAggArray.txt  laplacian264.txt  laplacian3D29791.txt  laplacian3D512.txt  laplacian3D512_1.txt  mode2.m  nektar.txt  nektar1A.txt  nektar1rhs.txt  nektarrhs.txt  nopoly.mtx  oldSaena  options001.xml  options002.xml  options003_petsc.xml  options004_ml.xml  (+6 more)
data/FloridaCollection/: G55.mtx  c-29.mtx  floatToBinary3_matrix  triangle_matrix  triangle_matrix2
data/Helmholtz2D_AllBCs/: Helmholtz2D_P2_AllBCs.xml  Helmholtz2D_P3_AllBCs.xml  Helmholtz2D_P4_AllBCs.xml  Helmholtz2D_P5_AllBCs.xml  Helmholtz2D_P6_AllBCs.xml  Helmholtz2D_P7_AllBCs.xml  mode2.m  mode3.m  mode4.m  mode5.m  mode6.m  mode7.m
data/Helmholtz2D_CG_curved_tri/: Helmholtz2D_CG_P2_Modes_curved_tri.mtx  Helmholtz2D_CG_P2_Modes_curved_tri.xml  Helmholtz2D_CG_P3_Modes_curved_tri.mtx  Helmholtz2D_CG_P3_Modes_curved_tri.xml  Helmholtz2D_CG_P4_Modes_curved_tri.mtx  Helmholtz2D_CG_P4_Modes_curved_tri.xml  Helmholtz2D_CG_P5_Modes_curved_tri.mtx  Helmholtz2D_CG_P5_Modes_curved_tri.xml  Helmholtz2D_CG_P6_Modes_curved_tri.mtx  Helmholtz2D_CG_P6_Modes_curved_tri.xml  Helmholtz2D_CG_P7_Modes_curved_tri.mtx  Helmholtz2D_CG_P8_Modes_curved_tri.mtx  Helmholtz2D_CG_P8_Modes_curved_tri.xml  v210.txt  v252.txt  v294.txt  v336.txt
data/ch3-3-b1/: ch3-3-b1.mtx
data/homg/: A.txt  rhs.txt  rhs_fine.txt
data/nektar/: nek_g2u_0.txt  nek_g2u_1.txt  nek_map_0.txt  nek_map_1.txt  nek_map_cont_4.txt  sol_4matlab.txt
data/old/: 1089s32x32o1.txt  25o1s4_2.txt  625o3s8.txt  Helmholtz3D_Hex_AllBCs_P2.mtx  Pu.txt  celegansneural_sorted.mtx  example.mtx  laplacian3D512_0.txt  nektar1A_sorted.mtx
data/vectors/: readBinary2_vector  v100.txt  v10000.txt  v1089.txt  v126.txt  v131072.txt  v148.txt  v16.txt  v16641.txt  v18513.txt  v2089.txt  v2145.txt  v2401.txt  v2426.txt  v25.txt  v256.txt  v260.txt  v26435.txt  v28.txt  v289.txt  v296.txt  v297.txt  v31719.txt  v329.txt  v33153.txt  v360.txt  v4.txt  v40000.txt  v4225.txt  v432.txt  v48.txt  v483.txt  v4884.txt  v4941.txt  v5041.txt  v518.txt  v575.txt  v59.txt  v6.txt  v625.txt  (+8 more)
examples/: examples.txt
experiments/: CMakeLists.txt  Poisson.cpp  Poisson_PETSc.cpp  banded.cpp  basic.cpp  file.cpp  file2.cpp  gemm.cpp  gemm_2file.cpp  gemm_MG.cpp  homg_matrices.txt~  homg_matrices2.txt~  lazy.cpp  main.cpp  main_dense_matvec.cpp  main_dense_matvec002.cpp  main_petsc_viewer.cpp  main_read_2file.cpp  main_read_file.cpp  nnz_test_bigred.txt~  profile.cpp  profile_file.cpp  profile_file_PETSc.cpp  report 24Dec2016.txt~  saenaComb_bigred_256proc.txt~  saenaComb_bigred_weak scaling.txt~  saenaComb_bigred_weak scaling5.txt~  saenaComb_kingspeak_weak scaling.txt~  saenaComb_kingspeak_weak scaling2.txt~  saenaComb_kingspeak_weak scaling3.txt~  saenaComb_kingspeak_weak scaling4.txt~  saenaComb_kingspeak_weak scaling5.txt~  zfp.cpp  zfp_dense.cpp
experiments/maybe_duplicates/: main_solve_pcg.cpp
experiments/old/: main_dense_matvec003.cpp  main_dense_matvec004.cpp  main_local_matvec_comparison.cpp  main_matvec_multigrid_levels.cpp  main_matvec_old.cpp
include/: AMGClass.cpp  AMGClass.h  GR_encoder.h  SaenaMatrix.h  SaenaObject.h  auxFunctions.h  aux_functions.h  aux_functions2.h  combblas_functions.h  coomatrix.cpp  coomatrix.h  csc2matrix.h  cscmatrix.h  cscmatrix2.h  csrmatrix.h  css2matrix.h  cssmatrix.h  data_struct.h  grid.h  ietl_saena.h  include_list.txt  lamlan_saena.h  petsc_functions.h  prolongMatrix.h  prolong_matrix.h  prolongmatrix.h  restrictMatrix.h  restrict_matrix.h  restrictmatrix.h  saena.h  saena.hpp  saena.h~  saena_matrix.h  saena_matrix.tpp  saena_matrix_dense.h  saena_matrix_old.h  saena_object.h  saena_object.tpp  saena_object_old.h  saena_vector.h  (+3 more)
include/old_files/: csrmatrix.h
papers/: Saena.pptx  ref.bib
src/: 1test.cpp  AMGClass.cpp  CMakeLists.txt  GR_encoder.cpp  SaenaMatrix.cpp  SaenaObject.cpp  auxFunctions.cpp  aux_functions.cpp  aux_functions2.cpp  combblas_functions.cpp  coomatrix.cpp  coomatrix.cpp~  cscmatrix.cpp  csrmatrix.cpp  css2matrix.cpp  cssmatrix.cpp  data_struct.cpp  grid.cpp  main (elemental_eig1).cpp  main (elemental_eig2).cpp  main (elemental_matrix_example).cpp  main (elemental_svd_test).cpp  main.cpp  main_band_matrix.cpp  main_lazy.cpp  main_matmat.cpp  main_matmat_read_2file.cpp  main_matvec.cpp  main_orig.cpp  main_read_2file.cpp  main_read_file.cpp  main_shrink.cpp  main_vidhi.cpp  main_zfp.cpp  petsc_functions.cpp  prolongMatrix.cpp  prolong_matrix.cpp  prolongmatrix.cpp  restrict_matrix.cpp  restrictmatrix.cpp  (+29 more)
test/: COO2CSC.jl  cat_mat.sh  julia_plot_matrix.jl  rename.sh  test_parallel.py  test_parallel_np_range_matmat_read.py  test_parallel_range.py  test_parallel_range_matmat_random.py  test_range_laplacian.py  test_serial.py  test_serial_range.py
test_results/: 1-chebyshev-nektar-report.txt  2-nektar_report_pcg_chebyshev.txt  CG and jacobi results plot.xlsx
tests/: SaenaCombBLAS.html  SaenaCombBLAS_bigred001.Rmd  SaenaCombBLAS_bigred001.html  SaenaCombBLAS_kingspeak001.Rmd  homg_matrices.txt  nnz_test_bigred.txt  report 24Dec2016.txt  result_saena_combblas1.txt  result_saena_combblas2.txt  result_saena_combblas3.txt  result_saena_combblas4.txt  saenaComb_bigred_256proc.txt  saenaComb_bigred_64proc.txt  saenaComb_bigred_strong_scaling.txt  saenaComb_bigred_weak scaling.txt  saenaComb_kingspeak_weak scaling.txt
(+335 files in other folders)
