#message("SAENA_LIB_DEPENDENCIES:\ " ${SAENA_LIB_DEPENDENCIES})

add_executable(Saena            main.cpp             ${SOURCE_FILES} ${HEADER_FILES})
add_executable(Saena_file       main_read_file.cpp   ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(Saena_2file      main_read_2file.cpp  ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(Saena_band       main_band_matrix.cpp ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(Saena_lazy       main_lazy.cpp        ${SOURCE_FILES} ${HEADER_FILES})
add_executable(Saena_zfp        main_zfp.cpp         ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(Saena_gemm       main_gemm.cpp        ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(Saena_gemm_2file main_gemm_2file.cpp  ${SOURCE_FILES} ${HEADER_FILES})

target_link_libraries(Saena             ${SAENA_LIB_DEPENDENCIES})
target_link_libraries(Saena_file        ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(Saena_2file       ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(Saena_band        ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(Saena_lazy        ${SAENA_LIB_DEPENDENCIES})
target_link_libraries(Saena_zfp         ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(Saena_gemm        ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(Saena_gemm_2file  ${SAENA_LIB_DEPENDENCIES})