#message("SAENA_LIB_DEPENDENCIES:\ " ${SAENA_LIB_DEPENDENCIES})

add_executable(basic      basic.cpp      ${SOURCE_FILES} ${HEADER_FILES})
add_executable(file       file.cpp       ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(file2      file2.cpp      ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(banded     banded.cpp     ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(lazy       lazy.cpp       ${SOURCE_FILES} ${HEADER_FILES})
add_executable(zfp        zfp.cpp        ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(gemm       gemm.cpp       ${SOURCE_FILES} ${HEADER_FILES})
#add_executable(gemm_2file gemm_2file.cpp ${SOURCE_FILES} ${HEADER_FILES})

target_link_libraries(basic      ${SAENA_LIB_DEPENDENCIES})
target_link_libraries(file       ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(file2      ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(banded     ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(lazy       ${SAENA_LIB_DEPENDENCIES})
target_link_libraries(zfp        ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(gemm       ${SAENA_LIB_DEPENDENCIES})
#target_link_libraries(gemm_2file ${SAENA_LIB_DEPENDENCIES})